fixed overlapping design issue in services area

--- a/css/style.css
+++ b/css/style.css
@@ -215,6 +215,7 @@
 .site-main > .services-area .services{
     background-color: rgba(248, 252, 253, 0.973);
     padding: 2rem 0;
+    height: 26rem;
     width: 16rem;
     margin: 5rem .5rem;
     transition: box-shadow .5s ease;
